syntax = "proto3";
package grpc_clock;

service GrpcClockService {
    rpc Get(Empty) returns (GrpcClockTime);

    rpc Set(GrpcClockTime) returns (Empty);

    rpc StreamTime(Empty) returns (stream GrpcClockTime);
}

message Empty {
}

message GrpcClockTime {
    uint32 minute = 1;
    uint32 second = 2;
}
